classDiagram
    class Owner {
        +int owner_id
        +string name
        +string email
        +string phone
        +list pets
        +update_profile()
        +add_pet(pet)
        +remove_pet(pet_id)
        +view_pets()
        +get_all_tasks()
    }

    class Pet {
        +int pet_id
        +string name
        +string species
        +string breed
        +int age
        +string diet_notes
        +string medication_notes
        +int owner_id
        +list tasks
        +update_profile()
        +add_task(task)
        +view_tasks()
    }

    class Task {
        +int task_id
        +string title
        +string task_type
        +datetime due_time
        +string priority
        +string status
        +int pet_id
        +string frequency
        +mark_complete()
        +reschedule(new_time)
        +get_summary()
    }

    class Scheduler {
        +list tasks
        +list pets
        +list owners
        +add_owner(owner)
        +add_pet(pet)
        +find_owner(owner_id)
        +find_pet(pet_id)
        +schedule_task(task)
        +mark_task_complete(task_id)
        +get_all_tasks()
        +get_tasks_for_day(date)
        +get_overdue_tasks()
        +sort_tasks_by_time()
        +detect_conflicts()
        +filter_tasks(status, pet_name)
    }

    Owner "1" --> "*" Pet : owns
    Pet "1" --> "*" Task : has
    Scheduler --> Owner : registers/manages
    Scheduler --> Pet : finds/syncs
    Scheduler --> Task : schedules/sorts/filters
